crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@functions_in_cairo_m___function_calls.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Function Calls"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn test_calls() -> felt {
    return double(double(5));
}
fn double(x: felt) -> felt {
    return x * 2;
}
============================================================
Generated CASM:
test_calls:
test_calls:
test_calls_0:
   0: 9 5 2 _              // Arg 0: [fp + 2] = 5
   1: 10 4 5 _             // call double
   2: 10 5 5 _             // call double
   3: 4 4 0 -3             // Return value 0: [fp -3] = [fp + 4] + 0
   4: 11 _ _ _             // return
double:
   5: 6 -4 2 -3            // [fp + -3] = [fp + -4] * 2
   6: 11 _ _ _             // return
