crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@functions_in_cairo_m___function_with_parameters.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Function with Parameters"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn add(a: felt, b: felt) -> felt {
    return a + b;
}
============================================================
Generated CASM:
add:
   0: 0 2147483642 2147483643 2147483644 // [fp + -3] = [fp + -5] op [fp + -4]
   1: 11 _ _ _             // return
