crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@functions_in_cairo_m___function_with_return_values.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Function with Return Values"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn simple() -> felt {
    return 42;
}
============================================================
Generated CASM:
simple:
   0: 9 42 2147483644 _    // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
