crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@functions_in_cairo_m___simple_function.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Simple Function"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn simple() -> felt {
    return 42;
}
============================================================
Generated CASM:
simple:
   0: 9 42 -3 _            // Return value 0: [fp -3] = 42
   1: 11 _ _ _             // return
