crates/compiler/codegen/tests/snapshots/mdtest_codegen_snapshots@functions_in_cairo_m___simple_function_2.snap
---
source: crates/compiler/codegen/tests/mdtest_snapshots.rs
description: "Codegen snapshot for mdtest: Functions in Cairo-M - Simple Function 2"
input_file: mdtest/01-basics/03-functions.md
---
Source:
fn foo() {
    return;
}
============================================================
Generated CASM:
foo:
   0: 11 _ _ _             // return
